--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@portone/browser-sdk": "^0.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.9.4",
+    "axios": "^1.5.1",
+    "proxy": "https://kapi.kakao.com",
     "chart.js": "^2.9.4",
     "npm_module": "^0.0.0",
     "react": "^18.2.0",
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "iamport-typings": "^1.3.1"
   }
 }
